# sdk

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  pyproject.toml  releaserc.toml
.claude/: CLAUDE.md
.cursor/rules/: ainfera.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  live-smoke.yml  python-ci.yml  release.yml
examples/: README.md  async_usage.py  error_handling.py  quickstart.py  receipt_verification.py  retries.py  streaming.py  tools.py
python/ainfera/: __init__.py  agent_card.py  agents.py  audit.py  cli.py  client.py  exceptions.py  inference.py  ledger.py  manifest_schema.md  receipt.py  verify.py  wallet.py
python/ainfera/_internal/: __init__.py  canonical.py  endpoints.py  http.py  jws.py
python/examples/: 01_register_agent.py  02_mint_card.py  03_topup_wallet.py  04_inference.py  05_read_audit.py  06_verify_chain.py
python/tests/: conftest.py  test_async_resources.py  test_cli_install.py  test_client.py  test_http.py  test_jws.py  test_resources.py  test_verify.py
scripts/: live-smoke.sh
tests/: __init__.py  test_smoke.py
typescript/: README.md
