# ainfera — Python SDK for Ainfera

# Agent-native inference routing by Ainfera. Python SDK — signed AgentCards, routed inference, audit chains.

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ainfera"
version = "1.1.0"
description = "Agent-native inference routing by Ainfera. Python SDK — signed AgentCards, routed inference, audit chains."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Ainfera Inc"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "joserfc>=0.9",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "pytest-asyncio>=0.23",
    "pyright>=1.1",
    "click>=8.0",
    "pyyaml>=6.0",
    "respx>=0.23.1",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["python"]
include = ["ainfera*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "A", "C4", "SIM", "UP"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = "-v --tb=short"
